# RedPotion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  diff_settings.py
Data/: Code.json  NonMatching.json  OK.json  Total.json  oot3d.ld
Disassembly/: CMakeLists.txt  SHT__INIT_ARRAY.txt  data_chunks.txt  oot3d.cfg  rodata_chunks.txt
Disassembly/tools/: baserom_fixes.py  exefs2elf.py  gcc_to_arm_asm.py  split_arm_data_chunks.py  split_data_chunks.py  split_n3dsdisasm.py
Dissasembly/: CMakeLists.txt  oot3d.cfg
Dissasembly/tools/: n3dsdisasm  split_n3dsdisasm.py
Include/: functions.hpp  non_matchings.hpp  z3D.hpp  z3Dbgcheck.hpp
Source/: Stubs.c  crt0.cpp  cstring.cpp  dsp.cpp
Source/Game/actors/Actor_1D9/: z_actor_1d9.hpp
Source/Game/actors/Actor_1DA/: z_actor_1da.cpp  z_actor_1da.hpp
Source/Game/actors/Bg_Gnd_Soulmeiro/: z_bg_gnd_soulmeiro.cpp
Source/Game/actors/Bg_Hidan_Firewall/: z_bg_hidan_firewall.cpp
Source/Game/actors/Bg_Spot16_Bombstone/: z_bg_spot16_bombstone.cpp
Source/Game/actors/En_Fish/: z_en_fish.cpp
Source/Game/actors/En_Horse_Game_Check/: z_en_horse_game_check.cpp
Source/Game/actors/En_Ik/: z_en_ik.cpp
Source/Game/actors/En_Wallmas/: z_en_wallmas.cpp
Source/Game/classes/: Class_4EBE18.cpp  Class_4EBE18.h
Source/data/: conststring.cpp  data.cpp  rodata.cpp
Source/functions/: functions_2A0000s.cpp  functions_300000s.cpp  functions_310000s.cpp  functions_320000s.cpp  functions_380000s.cpp  functions_3E0000s.cpp  functions_410000s.cpp  functions_420000s.cpp
Source/nn/: applet.cpp  dbg.cpp  dsp.cpp  err.cpp  os.cpp  srv.cpp  svc.cpp
Symbols/: Unnamed.sym  keep_symbols.txt
Symbols/nn/: crt0.sym
Symbols/nn/dsp/: dsp_Api.sym
Tools/: build.py  build_asm_deps.py  check.py  convert_to_unnamed_syms.py  diff.py  dumpsymbols.py  preproc.py  progress.py  settings.py
